Fixed display issue where messages would overflow beyond bottom of container

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -4,7 +4,7 @@
 
 #header {
     padding-right: 30px;
-    height: 10vh;
+    min-height: 8vh;
 }
 
 /* #logout {
