--- a/client/src/components/MainWindow/ChatPanel.css
+++ b/client/src/components/MainWindow/ChatPanel.css
@@ -1,7 +1,4 @@
 #chat-panel-header {
-    position: absolute;
-    top: 0;
-    width: 100%;
     height: 51.5px;
     border-bottom: solid;
     border-color: rgba(0, 0, 0, 0.35);
@@ -11,7 +8,6 @@
 /* Chat Title Styles */
 .chat-title-container {
     padding: 8px 0px 8px 36px;
-    height: 51.5px;
 }
 
 .chat-title-container h3 {
@@ -44,7 +40,6 @@ hr {
 
 /* Chat Icons Styles */
 .icons-container {
-    height: 51.5px;
     padding: 0 32px;
 }
 
@@ -57,7 +52,7 @@ hr {
     position: absolute;
     top: 51.5px;
     padding: 8px 16px;
-    height: 100%;
+    height: calc(100% - 51.5px);
     width: 100%;
     overflow-y: auto;
 }
@@ -106,6 +101,5 @@ hr {
 } */
 
 .user-message {
-    /* background-color: #342E34; */
     margin-left: auto;
 }
